# Eurobin-Coopetition

./: .gitignore  CMakeLists.txt  README.md  package.xml  requirements.txt
.media/: objects.key
launch/: agent.launch  main.launch  speech2text.launch  text2speech.launch
modules/: florence_debug.py
modules/agent/: agent.py  autonomous_ego.py  command_gen.py  local_agent.py
modules/speech2text/: requirements.txt  speech2text.py
modules/text2speech/: text2speech.py
srv/: Pick.srv  PickService.srv
